--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container header-container">
+    <header>
+        <div class="container">
+        <div class="header-container">
             <a href="./index.html" class="header-logo-link">
                 <i>Simply</i> Chocolate
                 <svg class="header-logo-icon" width="21" height="21">
@@ -113,6 +114,7 @@
                     </li>
                 </ul>
             </div>
+        </div>
         </div>
     </header>
 </body>
