--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,114 +9,136 @@
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-            rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
 
-            <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
-        <div class="header-container">
-            <a href="./index.html" class="header-logo-link">
-                <i>Simply</i> Chocolate
-                <svg class="header-logo-icon" width="21" height="21">
-                    <use href="./images/icons.svg#icon-chocolate-logo"></use>
-                </svg>
-            </a>
-            <!-- Tablet -->
-            <div class="header-list-div">
-                <nav class="header-navigation">
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="" class="nav-link">Home</a>
+            <div class="header-container">
+                <a href="./index.html" class="header-logo-link">
+                    <i>Simply</i> Chocolate
+                    <svg class="header-logo-icon" width="21" height="21">
+                        <use href="./images/icons.svg#icon-chocolate-logo"></use>
+                    </svg>
+                </a>
+                <!-- Tablet -->
+                <div class="header-list-div">
+                    <nav class="header-navigation">
+                        <ul class="nav-list">
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">How it’s made?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Chocolate is loved</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <ul class="header-social-list">
+                        <li class="header-social-item">
+                            <a href="" class="header-social-link">
+                                <svg class="header-social-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="" class="nav-link">How it’s made?</a>
+                        <li class="header-social-item">
+                            <a href="" class="header-social-link">
+                                <svg class="header-social-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="" class="nav-link">Chocolate is loved</a>
+                        <li class="header-social-item">
+                            <a href="" class="header-social-link">
+                                <svg class="header-social-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </nav>
-                <ul class="header-social-list">
-                    <li class="header-social-item">
-                        <a href="" class="header-social-link">
-                            <svg class="header-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="header-social-item">
-                        <a href="" class="header-social-link">
-                            <svg class="header-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="header-social-item">
-                        <a href="" class="header-social-link">
-                            <svg class="header-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!--Mobile-->
-            <button class="button-burger">
-                <svg class="burger-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-menu"></use>
-                </svg>
-            </button>
-
-            <div class="mobile-modal">
-                <button class="modal-close-button">
-                    <svg class="modal-close-icon">
-                        <use></use>
+                </div>
+                <!--Mobile-->
+                <button class="button-burger">
+                    <svg class="burger-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-menu"></use>
                     </svg>
                 </button>
-                <nav class="modal-navigation">
-                    <ul class="modal-nav-list">
-                        <li class="modal-nav-item">
-                            <a href="" class="modal-nav-link"></a>
+
+                <div class="mobile-modal">
+                    <button class="modal-close-button">
+                        <svg class="modal-close-icon">
+                            <use></use>
+                        </svg>
+                    </button>
+                    <nav class="modal-navigation">
+                        <ul class="modal-nav-list">
+                            <li class="modal-nav-item">
+                                <a href="" class="modal-nav-link"></a>
+                            </li>
+                            <li class="modal-nav-item">
+                                <a href="" class="modal-nav-link"></a>
+                            </li>
+                            <li class="modal-nav-item">
+                                <a href="" class="modal-nav-link"></a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <ul class="modal-social-list">
+                        <li class="modal-social-item">
+                            <a href="" class="modal-social-link">
+                                <svg class="modal-social-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="modal-nav-item">
-                            <a href="" class="modal-nav-link"></a>
+                        <li class="modal-social-item">
+                            <a href="" class="modal-social-link">
+                                <svg class="modal-social-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="modal-nav-item">
-                            <a href="" class="modal-nav-link"></a>
+                        <li class="modal-social-item">
+                            <a href="" class="modal-social-link">
+                                <svg class="modal-social-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </nav>
-                <ul class="modal-social-list">
-                    <li class="modal-social-item">
-                        <a href="" class="modal-social-link">
-                            <svg class="modal-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="modal-social-item">
-                        <a href="" class="modal-social-link">
-                            <svg class="modal-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="modal-social-item">
-                        <a href="" class="modal-social-link">
-                            <svg class="modal-social-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
         </div>
-        </div>
     </header>
+    <section class="hero-section">
+        <div class="container">
+            <h1 class="hero-title">Treat yourself or a loved one
+                to our finest ingredients for a moment of pure delight!</h1>
+            <div class="hero-tablet-div">
+                <div class="hero-div">
+                    <button type="button" class="hero-button">Buy now</button>
+                    <a href="" class="hero-link">How it’s made</a>
+                </div>
+                <div class="hero-scroll-div">
+                    <a href="" class="scroll-link">scroll down</a>
+                    <div class="hero-svg-div">
+                        <svg class="hero-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-down"></use>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
